--- a/index.qmd
+++ b/index.qmd
@@ -26,3 +26,5 @@ B.A in Economics | Sept 2007 - June 2011
 Wengo Analytics | Head Data Scientist | April 2018 - present
 
 GeoScynce | Chief Analyst | Spet 2012 - April 2018
+
+test
