--- a/index.qmd
+++ b/index.qmd
@@ -1,30 +1,20 @@
 ---
-title: "Finley Malloc"
+title: "Florian Metwaly"
 about:
   template: jolla
+  image: picture.jpg
   links:
-    - icon: twitter
-      text: twitter
-      href: https://twitter.com
+    - icon: linkedin
+      text: LinkedIn
+      href: https://www.linkedin.com/in/florian-metwaly-9a74b9289/
     - icon: github
-      text: Github
-      href: https://github.com
+      text: GitHub
+      href: https://github.com/flo1met
+    - icon: orcid
+      text: ORCID
+      href: https://orcid.org/0009-0001-8357-7870
 ---
 
-Finley Malloc is the Chief Data Scientist at Wengo Analytics. When not innovating on data platforms, Finley enjoys spending time unicycling and playing with her pet iguana.
+# Hi!
 
-## Education
-
-University of California, San Diego | San Diego, CA
-PhD in Mathematics | Sept 2011 - June 2015
-
-Macalester College | St. Paul MA
-B.A in Economics | Sept 2007 - June 2011
-
-## Experience
-
-Wengo Analytics | Head Data Scientist | April 2018 - present
-
-GeoScynce | Chief Analyst | Spet 2012 - April 2018
-
-test
+I am a a research master's student at Utrecht University in Methodology and Statistics for the Behavioral, Biomedical and Social Sciences, with a keen interest in causal inference, Bayesian statistics, and computational methods. My current work focuses on developing and applying innovative methodologies for Target Trial Emulation and Bayesian Evidence Synthesis. I am passionate about bridging theoretical advancements with real-world applications, particularly in healthcare and social sciences. 
