--- a/index.qmd
+++ b/index.qmd
@@ -2,7 +2,7 @@
 title: "Florian Metwaly"
 about:
   template: jolla
-  image: picture.jpg
+  image: picture.jpeg
   links:
     - icon: linkedin
       text: LinkedIn
@@ -10,11 +10,15 @@ about:
     - icon: github
       text: GitHub
       href: https://github.com/flo1met
-    - icon: orcid
+    - icon: link-45deg
       text: ORCID
       href: https://orcid.org/0009-0001-8357-7870
+    - icon: envelope
+      text: E-Mail
+      href: mailto:f.j.metwaly@uva.nl
 ---
 
 # Hi!
 
-I am a a research master's student at Utrecht University in Methodology and Statistics for the Behavioral, Biomedical and Social Sciences, with a keen interest in causal inference, Bayesian statistics, and computational methods. My current work focuses on developing and applying innovative methodologies for Target Trial Emulation and Bayesian Evidence Synthesis. I am passionate about bridging theoretical advancements with real-world applications, particularly in healthcare and social sciences. 
+I am a PhD student in the Psychological Methods Group at the University of Amsterdam and a member of the B[ayesian Graphical Modeling Lab](https://bayesiangraphicalmodeling.com/). My research focuses on Bayesian methods for intensive longitudinal data, with particular interests in computation, network modeling, and causality.
+I aim to make all my research and software openly available as open source.
